# llama.tt

./: .gitignore  pyproject.toml
llama_tt/: driver.py  dtype.py  log.py  tensor.py  test.py  utils.py
llama_tt/kernels/: elemwise.py  reduce.py  utils.py
llama_tt/kernels/elemwise/: __init__.py  binary.py  uniary.py  uniary_with_scalar.py
llama_tt/lighter/: __init__.py  cudart.py  driver.py  dtype.py  ops.py  tensor.py
llama_tt/lighter/tensor/: __init__.py  base.py  device.py
llama_tt/ops/: elemwise.py  reduce.py
tests/: test_add.py
typings/cuda/bindings/: __init__.pyi  cufile.pyi  driver.pyi  nvjitlink.pyi  nvrtc.pyi  nvvm.pyi  runtime.pyi
typings/cuda/bindings/_bindings/: cynvrtc.pyi
typings/cuda/bindings/_internal/: nvjitlink.pyi  utils.pyi
typings/cuda/bindings/utils/: __init__.pyi  _ptx_utils.pyi
typings/cuda/core/: __init__.pyi
typings/cuda/core/experimental/: _context.pyi  _device.pyi  _dlpack.pyi  _event.pyi  _graph.pyi  _kernel_arg_handler.pyi  _launch_config.pyi  _launcher.pyi  _linker.pyi  _memory.pyi  _memoryview.pyi  _module.pyi  _program.pyi  _stream.pyi  _system.pyi  utils.pyi
typings/cuda/core/experimental/_utils/: clear_error_support.pyi  cuda_utils.pyi  driver_cu_result_explanations.pyi  runtime_cuda_error_explanations.pyi
