[project]
authors = [{ name = "Fr4nk1in", email = "sh.fu@outlook.com" }]
name = "llama.tt"
requires-python = ">=3.13, <3.14"
version = "0.1.0"
dependencies = ["triton>=3.5.0,<4", "cuda-core[cu12]>=0.4.0,<0.5", "numpy>=2.3.4,<3", "colorlog>=6.10.1,<7"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.pypi-dependencies]
llama_tt = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.13"
cuda = "==12.8"
pip = ">=25.2,<26"
mypy = ">=1.18.2,<2"
